--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "axios": "^1.7.9",
+    "dotenv": "^16.4.7",
     "file-saver": "^2.0.5",
     "framer-motion": "^11.15.0",
     "react": "^18.3.1",
