--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,1 @@
-MONGO_URI=mongodb+srv://tejasrinivassjps:indiansarethebest@cluster0.0a1va.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+MONGO_URI="mongodb+srv://admin:admin12345@cluster0.0a1va.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0"
